--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-auth-web-app",
-  "version": "0.1.0",
+  "version": "1.1.0 --jinxed",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack --experimental-https",
@@ -15,17 +15,18 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
-    "stylelint": "^16.12.0"
+    "stylelint": "^16.12.0",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^3.2.0",
     "@types/better-sqlite3": "^7.6.12",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.2",
     "stylelint-config-recommended": "^14.0.1",
-    "typescript": "^5"
+    "typescript": "^5.7.2"
   }
 }
